<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">DevHub</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="unexpected_error">Unexpected error occurred. You should restart app</string>
    <string name="videos_string">Videos</string>
    <string name="video_string">Video</string>
    <string name="categories_string">Categories</string>
    <string name="category_string">Category</string>
    <string name="comments_string">Comments</string>
    <string name="comment_string">Comment</string>
    <string name="courses_string">Courses</string>
    <string name="course_string">Course</string>
    <string name="pattern_date_comments">MMM, d yy</string>
    <string name="no_connection">No connection!!</string>
    <string name="title_activity_preferences">Settings</string>
    <string name="btn_forget_password">I\'ve forgotten my pass</string>
    <string name="login_error_incorrect">Your Email, Username or Password is incorrect. Try again</string>
    <string name="login_error_email_no_verified">Your should verify your email address</string>
    <string name="login_error_network_not_available">You don\'t have Internet. You can check your Internet connection, without it, App doesn\'t work</string>
    <string name="input_email_login">Email</string>
    <string name="input_password">Password</string>
    <string name="login_error_max_length">Password must be maximum 10 characters or numbers</string>
    <string name="login_error_min_length">Password must be at least 4 characters or numbers</string>
    <string name="login_signup_error_inputs_empty">You\'ve forgotten write both required fields</string>
    <string name="signup_error_different_passwords">Passwords are different and it must match</string>
    <string name="network_error_title">Network not available</string>
    <string name="network_error_msg">You don\'t have Internet. You can check your Internet connection, without it, App will be closed</string>
    <string name="network_error_cancel">Wi-Fi</string>
    <string name="input_email_sign_up">Email</string>
    <string name="input_confirm_password_sign_up">Confirm Password</string>
    <string name="btn_login">LOG IN</string>
    <string name="btn_sign_up_login">SIGN UP</string>
    <string name="btn_sign_up">CREATE ACCOUNT</string>
    <string name="btn_have_account">I already have an account</string>
    <string name="login_no_validate_email_yet">You have to open your email and verify your account</string>
    <string name="login_signup_error_email_pattern">You aren\'t write well your email, try again</string>
    <string name="signup_error_email_registered_yet">This email has been registered in our system yet</string>
    <string name="signup_error">An unexpected error has occurred, please try again</string>
    <string name="login_reset_password_send">An email was successfully sent with reset instructions</string>
    <string name="login_forget_password_dialog_title">Email address</string>
    <string name="login_forget_password_dialog_msg">We will send you an email with the instructions</string>
    <string name="login_forget_password_dialog_hint">youremail@gmail.com</string>
    <string name="login_forget_password_email_not_exist">This email is not registered in DevHub</string>
    <string name="ok">Ok</string>
    <string name="delete">Delete</string>
    <string name="open">Open</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="exit">Exit</string>
    <string name="rate">Rate!</string>
    <string name="wifi_settings">Settings</string>
    <string name="no_courses">No Courses</string>
    <string name="no_comments">No Comments</string>
    <string name="new_comment">New comment</string>
    <string name="new_comment_hint">New comment...</string>
    <string name="new_comment_size_0">You erased all your comment! try again</string>
    <string name="logout_dialog_msg">Are you sure you want to log out?</string>
    <string name="logout">Log out</string>
    <string name="i_am_sure">I\'m Sure</string>
    <string name="please_wait">Please wait...</string>
    <string name="preferences_user_name_placeholder">User name</string>
    <string name="preferences_user_name_title_dialog">Change User Name</string>
    <string name="preferences_user_name_msg_dialog">This name will appear like an Alias in comments or in your uploaded courses</string>
    <string name="summary_notifications_preferences">When arrives new courses you will be or not notified</string>
    <string name="preferences_user_name_changed">Your user name has been successfully changed</string>
    <string name="preferences_delete_user_title">Are you sure?</string>
    <string name="preferences_delete_user_msg">This process is irreversible, you will lose all data and if you have courses, you can lose too</string>
    <string name="preferences_contact_title">Contact Me!</string>
    <string name="preferences_contact_content">If you have some questions or issues, You can to contact with me thought the following social networks:</string>
    <string name="preferences_about_title">About</string>
    <string name="preferences_about_content">\nLanguages - English or Spanish \nCopyright - All rights reserved \nThanks to Salesianos Triana</string>
    <string name="pick_image_chooser_avatar">Select a photo to Avatar</string>
    <string name="no_image_avatar">Choose your fist photo like Avatar!</string>
    <string name="image_avatar_error">An unexpected error occurred. Try with the same photo or with another one</string>
    <string name="image_avatar_error_no_saving">Photo was changed but not saved successfully</string>
    <string name="image_avatar_error_picasso">An unexpected error occurred to load photo, please come back later and try again</string>
    <string name="by">by</string>
    <string name="fab_delete_avatar_content">Are you sure you want to delete this avatar?</string>
    <string name="rate_send_successfully">Your vote has been dispatched successfully</string>
    <string name="rate_delete_successfully">Your vote has been deleted successfully</string>
    <string name="rate_unexpected_error">Your vote has not been received successfully, try again</string>
    <string name="title_activity_avatar">Avatar</string>
    <string name="settings">Settings</string>
    <string-array name="social_networks">
        <item>Twitter</item>
        <item>GitHub</item>
        <item>LinkedIn</item>
        <item>Email</item>
        <item>Web Site</item>
    </string-array>
    <!-- *** Preferences *** -->
    <string name="pref_header_my_account">My Account</string>
    <string name="pref_title_display_name">Name</string>
    <string name="pref_title_display_avatar">Avatar</string>
    <string name="pref_title_display_log_out">Log out</string>
    <string name="pref_title_display_delete_account">Delete account</string>
    <!-- -->
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_display_notifications">Notify me</string>
    <!-- -->
    <string name="pref_header_help">Help</string>
    <string name="pref_title_display_about">About</string>
    <string name="pref_title_display_contact">Contact</string>
    <!-- *** Preferences *** -->
</resources>
