<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSecondary"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="es.alejandrolora.devhub.activitys.LoginActivity">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:src="@drawable/logo_login" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/editTextEmaiLogin"
        met_floatingLabelTextColor="@color/colorHelperLogin"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="35dp"
        android:hint="@string/input_email_login"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/white"
        app:met_baseColor="@android:color/white"
        app:met_clearButton="true"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelText="@string/input_email_login"
        app:met_hideUnderline="true"
        app:met_iconLeft="@mipmap/ic_email"
        app:met_iconPadding="0dp"
        app:met_textColorHint="#757575" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/editTextPasswordLogin"
        met_floatingLabelTextColor="@color/colorHelperLogin"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/input_password"
        android:inputType="textPassword"
        android:textColor="@android:color/white"
        app:met_baseColor="@android:color/white"
        app:met_clearButton="true"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelText="@string/input_password"
        app:met_hideUnderline="true"
        app:met_iconLeft="@mipmap/ic_pass"
        app:met_iconPadding="0dp"
        app:met_maxCharacters="10"
        app:met_textColorHint="#757575" />


    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:background="@drawable/material_button"
        android:elevation="2dp"
        android:text="@string/btn_login"
        android:textColor="@android:color/white"
        android:textSize="18dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">


        <Button
            android:id="@+id/buttonSignUpLogin"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@drawable/material_button"
            android:elevation="1dp"
            android:text="@string/btn_sign_up_login"
            android:textColor="@android:color/white" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonForget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:background="@android:color/transparent"
            android:text="@string/btn_forget_password"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/white"
            android:textSize="15dp"
            android:textStyle="italic" />
    </LinearLayout>


</LinearLayout>
